# Covid-19-Unsupervised-Modeling

./: .gitignore  README.md  main.py  preprocessing.ipynb  pyproject.toml
data/: clustering_ready.csv  global_trends.csv  time_series_final.csv
src/: preprocessing.ipynb
