[project]
name = "Covid-19-Unsupervised-Modeling"
version = "0.1.0"
description = "An unsupervised modeling pipeline to identify latent transmission patterns within global COVID-19 data. Leveraging datasets from JHU and Worldometers, this involves cleaning multi-level temporal data, followed by feature engineering to capture infection trajectories. The models uncover hidden structures in viral spread across different regions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]
